fix spacing in nav

--- a/app/styles/components/_nav.scss
+++ b/app/styles/components/_nav.scss
@@ -8,7 +8,7 @@
     color: $nav-text-color;
   }
 
-  .menu>li>a {
+  .menu > .menu-text > a {
     display: inline;
     padding: 0;
   }
